[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LabeledProgressBar.gd" type="Script" id=1]

[node name="ProgressBar" type="ProgressBar"]
rect_min_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
step = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -8.5
margin_right = 94.0
margin_bottom = 8.5
align = 1
valign = 1

[connection signal="changed" from="." to="." method="_on_ProgressBar_changed"]
[connection signal="gui_input" from="." to="." method="_on_ProgressBar_gui_input"]
[connection signal="value_changed" from="." to="." method="_on_ProgressBar_value_changed"]
